<resources>
    <string name="app_name">RocksmithApp</string>
    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>

    <!--  we need to use video ids instead of video link  -->
    <string-array name="video_id_array">
        <item>dgoudpU0kL0</item>
        <item>96y0vyyPOoA</item>
        <item>4LxledfIUzQ</item>
        <item>hdN-cWbjAn8</item>
        <item>MUVGoNr1KLM</item>
        <item>76eyls9cUEU</item>
        <item>_c6VtcLUk5o</item>
        <item>OsS5RH2qH_w</item>
        <item>_v97kduvpm4</item>
        <item>5ACRo_9OV-Y</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="appWebsite">tobsirl.github.com</string>
    <string name="recentlyViewedEmptyMessage">You have no Song\'s added, listen to some music!</string>
    <string name="recentlyViewedLbl">Recently Added Songs\'s</string>
    <string name="favouritesSongsLbl">Favourite Song\'s</string>
    <string name="favouritesEmptyMessage">No Favourite Song\'s Yet !</string>
    <string name="searchSongHint">Enter a Song Title</string>
    <string name="searchSongTypePrompt">Chose a Type of Music</string>
    <string name="searchSongsResultsLbl">Search Results</string>
    <string name="searchSongsLbl">Search Song\'s</string>
    <string name="appDesc">RocksmithApp provides the user with and easy way to manage a list of songs and your favourite songs.</string>
    <string name="appMoreInfo">For more information about RocksmithApp or to provide feedback please visit our website.</string>
    <string name="updateCoffeeBtnLbl">Update a Song</string>
    <string name="songRatingLbl">Star Rating</string>
    <string name="songNameLbl">Song </string>
    <string name="artistNameLbl">Artist </string>
    <string name="difficultyLbl">Difficulty </string>
    <string name="songDetailsLbl">Full Song Details</string>
    <string name="deleteSongsLbl">Delete Song\'s</string>
    <string name="appHelpTitle">RocksmithApp Help</string>
    <string name="appHelp">This is the help screen for RocksmithApp</string>
    <string name="appHelpExtra">Basically\, if you need help on using this app, you probably shouldn\'t be using it</string>
    <string name="linktoRegister">New to Rocksmith?\n Register at\n <a href='https://rocksmithprogress.herokuapp.com'>https://rocksmithprogress.herokuapp.com</a></string>
    <string name="addASongLbl">Song Check In</string>
    <string name="add_song">Add Song</string>
    <string name="speedTextViewLbl">Speed </string>
    <string name="add_song_hint">Song Title</string>
    <string name="add_artist_hint">Artist Name</string>
    <string name="add_difficulty_hint">Between 0 - 100</string>
    <string name="add_speed_hint">Between 0 - 100</string>
    <string name="edit_song_hint">Song Title</string>
    <string name="edit_artist_hint">Artist Name</string>
    <string name="edit_difficulty_hint">0 - 100</string>
    <string name="edit_speed_hint">0 - 100</string>


</resources>
